Agregando nueva directorio para Algebra y preparando su contenido

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
-algebra/*
 analisis_I/*
 Math_esp/*
 Mech_ana/*
-*.pdf
 */.ipynb_checkpoints/*
-
+TISPISGIMR.pdf
+Algebra/Algebra_Lineal_7ma_Edicion_-_Stanley_Gro.pdf
